--- a/src/scss/layout/_favCharacters.scss
+++ b/src/scss/layout/_favCharacters.scss
@@ -9,6 +9,8 @@
   &__list {
     margin-bottom: 20px;
     display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
     gap: 20px;
 
     &--article {
